tests/spec/emit/snapshots/embedded_plain_struct_gets_no_shadow_stringer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Plain { pub v: int }
  
  struct Wrapper {
    embed Plain,
    pub tag: int,
  }
---
package main

type Plain struct {
	V int
}

type Wrapper struct {
	Plain
	Tag int
}
