tests/spec/emit/snapshots/embedded_pointer_field_emits_star_type.snap
---
source: tests/spec/emit/types.rs
description: |
  
  pub struct Base { pub id: int }
  
  struct Outer {
    embed Ref<Base>,
  }
  
  fn make(b: Ref<Base>) -> Outer {
    Outer { Base: b }
  }
---
package main

type Base struct {
	Id int
}

type Outer struct {
	*Base
}

func make_(b *Base) Outer {
	return Outer{Base: b}
}
