tests/spec/emit/snapshots/embedded_ref_to_alias_display_gets_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Logger { pub prefix: string }
  
  type L = Logger
  
  struct Server {
    embed Ref<L>,
    pub port: int,
  }
---
package main

import "fmt"

type Logger struct {
	Prefix string
}

func (l Logger) String() string {
	return fmt.Sprintf("Logger { prefix: %v }", l.Prefix)
}

func (l Logger) toString() string {
	return l.String()
}

type L = Logger

type Server struct {
	*L
	Port int
}

func (s Server) String() string {
	return fmt.Sprintf("{%v %v}", s.L, s.Port)
}
