tests/spec/emit/snapshots/emit_fstring_multiline_text.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test(name: string) -> string {
    f"hello
  {name}
  world"
  }
---
package main

func test(name string) string {
	return "hello\n" + name + "\nworld"
}
