tests/spec/emit/snapshots/emit_or_capture_no_collision_with_user_vars.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let bound_0 = 10
    for i in 0..(1 + 2) {
      fmt.Println(i)
    }
    fmt.Println(bound_0)
  }
---
package main

import "fmt"

func main() {
	bound_0 := 10
	for i := range 1 + 2 {
		fmt.Println(i)
	}
	fmt.Println(bound_0)
}
