tests/spec/emit/snapshots/emit_or_capture_range_loop_bound_temp_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_bound() -> int { 3 }
  
  fn main() {
    let mut sum = 0;
    for i in 0..make_bound() {
      sum = sum + i;
    }
    let bound_1 = 7;
    let _ = sum;
    let _ = bound_1;
  }
---
package main

func makeBound() int {
	return 3
}

func main() {
	sum := 0
	for i := range makeBound() {
		sum += i
	}
	_ = sum
}
