tests/spec/emit/snapshots/emit_raw_string_multiline_via_backtick.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    let s = r"a
  b"
    s
  }
---
package main

func test() string {
	s := `a
b`
	return s
}
