tests/spec/emit/snapshots/emit_raw_string_multiline_with_backtick_fallback.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    let s = r"first `tick
  second"
    s
  }
---
package main

func test() string {
	s := "first `tick\nsecond"
	return s
}
